fixed swagger ui bugs
